# beginner_agent

./: .env.example  .gitignore  CHECKPOINTING.md  README.md  RUNTIME.md  __init__.py  approval.py  approval_server.py  approval_store.py  artifact_store.py  artifacts.py  async_job_store.py  async_jobs.py  checkpoint_models.py  checkpoint_node.py  checkpoint_observability.py  checkpoint_policy.py  checkpoint_resume_probe.py  checkpoint_runtime.py  checkpointing.py  cli.py  config.py  docker-compose.yml  embeddings.py  evaluator.py  execution_monitor.py  executor.py  failure_memory.py  graph.py  llm_client.py  main.py  memory.py  memory_audit.py  memory_compaction.py  memory_eval_cases.py  memory_feedback.py  memory_jsonl_store.py  memory_judge.py  memory_lifecycle.py  memory_lifecycle_scheduler.py  (+29 more)
artifact_storage/: TODO.md
checkpoint_backends/: TODO.md
memory/: __init__.py  audit.py  compaction.py  effectiveness.py  eval_cases.py  feedback.py  jsonl_store.py  judge.py  lifecycle.py  lifecycle_scheduler.py  migrations.py  models.py  nodes.py  observability_sinks.py  online_eval.py  policy.py  postgres_performance.py  postgres_store.py  preference.py  quality.py  rerank_observability.py  retrieval.py  settings.py  store.py
memory_api/: TODO.md  __init__.py  app.py  models.py  repository.py  security.py
observability_backends/: TODO.md
remote_worker/: TODO.md
router_eval_datasets/: router_eval_core.json
routering/: __init__.py  config_registry.py  conflicts.py  context.py  eval.py  eval_categories.py  eval_models.py  eval_runner.py  failure_policy.py  metrics.py  (+23 more)
(+53 files in other folders)
