[project]
name = "beginner-agent"
version = "0.1.0"
description = "A layered LangGraph code-agent runtime prototype."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.6.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.7.4",
    "psycopg[binary]>=3.2.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

